fix topnav dropdown colors when in dark mode

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -72,6 +72,8 @@
   --topnav-dropdown-arrow-svg-margin-top: 4px;
   --topnav-dropdown-a-padding-x: 16px;
   --topnav-dropdown-a-padding-y: 12px;
+  --topnav-dropdown-bg-color: #f7f7f7;
+  --topnav-dropdown-ripple-color: #003f87;
 }
 .top.colorful, .top.dark {
   --titlebar-heading-color: #e0e0e0;
@@ -79,9 +81,7 @@
   --topnav-text-color: #e0e0e0;
   --topnav-dropdown-text-color: #222222;
   --topnav-currentpage-color: #e0e0e0;
-  --topnav-dropdown-bg-color: #f7f7f7;
   --topnav-ripple-color: #ffffff;
-  --topnav-dropdown-ripple-color: #003f87;
 }
 .top.colorful {
   --topnav-bg-color: var(--banner-primary);
@@ -94,11 +94,9 @@
   --menu-icon-fill: var(--mdc-theme-primary);
   --topnav-bg-color: var(--mdc-theme-background);
   --topnav-text-color: var(--mdc-theme-text-on-background);
-  --topnav-dropdown-text-color: var(--mdc-theme-text-on-background);
+  --topnav-dropdown-text-color: #222222;
   --topnav-currentpage-color: var(--mdc-theme-primary);
-  --topnav-dropdown-bg-color: var(--snackbar-background);
-  --topnav-ripple-color: #ffffff;
-  --topnav-dropdown-ripple-color: #ffffff;
+  --topnav-ripple-color: #003f87;
 }
 @media (max-width: 600px) { /*duplicated from above*/
   .top.mobile-colorful, .top.mobile-dark {
@@ -165,6 +163,11 @@
     --titlebar-heading-color: var(--mdc-theme-primary-lightest-most);
     --menu-icon-fill: var(--mdc-theme-primary-lightest-most);
     --topnav-currentpage-color: var(--mdc-theme-primary-lightest-most);
+  }
+  html.dark .top {
+    --topnav-dropdown-text-color: var(--mdc-theme-text-on-background);
+    --topnav-dropdown-bg-color: #303030;
+    --topnav-dropdown-ripple-color: #ffffff;
   }
   @media (max-width: 600px) {
     html.dark .top.mobile-light {
